# VirtualDesktop

./: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  CNAME  LICENSE  NOTES  README  README.md  RendererPlugin.cpp  RendererPlugin.h  distortions.cpp  distortions.f.glsl  distortions.h  distortions.v.glsl  ibex.cpp  ibex.h  index.html  lcd_monitor.blend  opengl_helpers.cpp  opengl_helpers.h  opengl_setup_x11.cpp  opengl_setup_x11.h  params.json  utils.cpp  utils.h
IbexMac/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  CMakeLists.txt  Filesystem.cpp  Filesystem.h  GLSLShaderProgram.cpp  GLSLShaderProgram.h  IbexMac-Info.plist  IbexMac-Prefix.pch  IbexMac.entitlements  IbexMacUtils.h  IbexMacUtils.mm  IbexVideoPlayer.h  IbexVideoPlayer.mm  MacOSXBundleInfo.plist.in  MyOgreView.h  MyOgreView.mm  MyOpenGLView.h  MyOpenGLView.mm  MyWindow.mm  RendererPlugin.cpp  RendererPlugin.h  ScreenGrabber.h  ScreenGrabber.m  ScreenshotView.h  ScreenshotView.mm  SimpleWorldRendererPlugin.cpp  SimpleWorldRendererPlugin.h  VideoPlayer.cpp  VideoPlayer.h  Window.cpp  Window.h  distortions.cpp  distortions.h  ibex.cpp  ibex.h  ibex_mac_utils.h  main.m  opengl_helpers.cpp  (+5 more)
IbexMac/Dependencies/Hydrax/: CMakeLists.txt  CfgFileManager.cpp  GodRaysManager.cpp  MaterialManager.cpp
IbexMac/Dependencies/Hydrax/Noise/: Noise.cpp
IbexMac/GL/: glew.c  glew.h
IbexMac/cmake/: FindAssimp.cmake  FindIrrlicht.cmake  FindOculusSDK.cmake  FindOgre.cmake  FindVLC.cmake
IbexMac/en.lproj/: MainMenu.xib  PreferencesWindow.xib
IbexMac/filesystem/: Filesystem.cpp
IbexMac/iphone_orientation_plugin/: iphone_orientation_listener.cpp
IbexMac/monitor/: IbexMonitor.cpp  IbexMonitor.h
IbexMac/oculus/: Rift.cpp  Rift.h
IbexMac/ogre3d_plugin/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  DotSceneLoader.cpp  DotSceneLoader.h  NativeRenderSystemCommands.h  TutorialApplication.cpp  TutorialApplication.h
IbexMac/preferences/: AppDelegate.mm  CMakeLists.txt  PreferencesWindowController.h  PreferencesWindowController.mm
IbexMac/resources/: plugins.cfg  resources.cfg
IbexMac/resources/ogre3d-media/Hydrax/: HydraxDemo.hdx
IbexMac/resources/ogre3d-media/terrain/: second_terrain.blend  second_terrain.blend1  second_terrain.blend2
IbexMac/resources/shaders/: depth.f.glsl  distortions.f.glsl  distortions.f.irrlicht.glsl  distortions.v.glsl  distortions_cache.f.glsl  distortions_cache_full.f.glsl  distortions_full.f.glsl  emissive.v.glsl  ground-normalmapped.f.glsl  ground-normalmapped.v.glsl  ground.f.glsl  skybox-cube.v.glsl  standard-normalmapped.v.glsl  standard.f.glsl  standard.v.glsl  text.f.glsl  water-reflect.f.glsl  water-reflect.v.glsl  water.f.glsl
IbexMac/simpleworld_plugin/: GeometricUtils.h  Model.cpp  Model.h  Rectangle.cpp  Rectangle.h  ShadowBufferRenderer.cpp  ShadowBufferRenderer.h  SimpleWorldRendererPlugin.cpp  SimpleWorldRendererPlugin.h
IbexMac/sixense/: CMakeLists.txt  sixense_controller.h
IbexMac/terrain/: CMakeLists.txt  Terrain.cpp  Terrain.h
IbexMac/video/: CMakeLists.txt  IbexVideoPlayer.h  IbexVideoPlayer.mm  VLCVideoPlayer.cpp  VideoPlayer.cpp  VideoPlayer.h
IbexMac/windows/: ApplicationLauncher.cpp  ApplicationLauncher.h  CMakeLists.txt  TextRenderer.cpp  TextRenderer.h  Window.cpp  Window.h  stb_truetype.h
src/: CMakeLists.txt  RendererPlugin.cpp  RendererPlugin.h  distortions.h  opengl_helpers.h  prepare_windows_vlc.bat
src/IPhoneHeadTracker/IPhoneHeadTracker/: AppDelegate.h  AppDelegate.m  IPhoneHeadTracker-Prefix.pch  ViewController.h  ViewController.m
src/IbexConfigTests/: IbexConfigTests-Info.plist  IbexConfigTests.m
src/IbexMac/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  GLSLShaderProgram.cpp  GLSLShaderProgram.h  IbexConfigMacOSXBundleInfo.plist.in  IbexMacUtils.h  IbexMacUtils.mm  MyOgreView.h  MyOpenGLView.h  MyOpenGLView.mm  MyWindow.h  MyWindow.mm  ScreenshotView.h  ScreenshotView.mm  ServerController.mm  ibex.cpp  opengl_helpers.cpp  utils.h
src/IbexMac.xcodeproj/project.xcworkspace/xcshareddata/: IbexMac.xccheckout
src/IbexMac/Dependencies/Hydrax/: Hydrax.cpp  MaterialManager.cpp  Prerequisites.h
src/IbexMac/Dependencies/SkyX/: CMakeLists.txt
src/IbexMac/cmake/: FindIrrlicht.cmake
src/IbexMac/en.lproj/: MainMenuIbexConfig.xib
src/IbexMac/filesystem/: CMakeLists.txt  Filesystem.cpp
src/IbexMac/monitor/: CMakeLists.txt  IbexMonitor.cpp
src/IbexMac/ogre3d_plugin/: TutorialApplication.cpp
src/IbexMac/preferences/: AppDelegate.h  PreferencesWindowController.h
src/IbexMac/resources/shaders/: emissive.f.glsl  emissive.v.glsl  ground-infinite-normalmapped.v.glsl  ground-normalmapped.f.glsl  water-reflect.v.glsl
src/IbexMac/simpleworld_plugin/: Rectangle.h  ShadowBufferRenderer.h  SimpleWorldRendererPlugin.cpp
src/IbexMac/sixense/: sixense_controller.cpp
src/IbexMac/video/: VideoPlayer.cpp
src/IbexMac/windows/: TextRenderer.cpp  Window.cpp
src/IbexWin/: GLSLShaderProgram.cpp  Ibex.vcxproj.filters  IbexWinNative.cpp  ServerController.h  guicon.cpp  guicon.h  ibex_win_utils.h  stdafx.cpp  stdafx.h  targetver.h
src/IbexWin/SOIL/: stb_image_aug.c
src/IbexWin/monitor/: IbexMonitor.h
src/IbexWin/oculus/: CMakeLists.txt
src/IbexWin/ogre3d_plugin/: BaseApplication.cpp  TutorialApplication.h
src/IbexWin/resources/shaders/: depth.v.glsl  distortions.v.glsl  skybox.f.glsl  (+4 more)
src/IbexWin/simpleworld_plugin/: GeometricUtils.cpp  ShadowBufferRenderer.cpp  SimpleWorldRendererPlugin.cpp
src/IbexWin/sixense/: sixense_controller.cpp
src/IbexWin/terrain/: Terrain.h
src/IbexWin/video/: VLCVideoPlayer.cpp
src/IbexWin/windows/: Window.h  stb_truetype.cpp
src/cmake/: FindOculusSDK.cmake
src/glm/: CMakeLists.txt
src/iphone_orientation_plugin/: iphone_orientation_listener.h
src/irrlicht_plugin/: irrlicht_plugin.h
src/ogre3d_plugin/: TutorialApplication.cpp  TutorialApplication.h
src/resources/: plugins.cfg
src/simpleworld_plugin/: SimpleWorldRendererPlugin.cpp  SimpleWorldRendererPlugin.h
src/sixense/: CMakeLists.txt
src/video/: CMakeLists.txt  VLCVideoPlayer.cpp  VideoPlayer.cpp
src/x11/: x11.cpp
(+152 files in other folders)
